--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,3 +124,12 @@
 .border-secondary {
   border-color: #e5e7eb;
 }
+
+.title-style {
+  color: #7d7d7d;
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #7d7d7d;
+  padding-bottom: 3px;
+}
